# pyallama

./: pyproject.toml
process_templates/: global_style.css  index.html  model.html
pyallama/: hellaswag.py  main.py  process.py
